# namepicker

./: .gitignore  LICENSE  Pipfile  README.md  example_list.txt  mypy.ini  pyoxidizer.bzl  pyproject.toml
dev/: database.py  database_interface.py  generate.py  namepicker.py
namepicker/: cli.py  database.py  database_interface.py  gui.py  namepicker.py  pony_tutorial.py  scrollable_frame.py  scrollable_frame2.py
tests/: __init__.py  conftest.py  test_database.py  test_namepicker.py
